added user transaction by category
